--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ select, input[type="text"] {
   border-radius: 8px;
   cursor: pointer;
   font-size: 1em;
-  margin: 0 auto 10px auto;
+  margin: 0 0 10px auto;
   display: block;
 }
 
